--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -1,7 +1,7 @@
 @import "lib/font-awesome/font-awesome";
 @import "lib/bootstrap/_bootstrap";
 @import "views/base";
-@import "views/header";
+@import "views/index";
 @import "views/about";
 @import "views/expEdu";
 @import "views/projects";
