--- a/public/stylesheets/views/skills.scss
+++ b/public/stylesheets/views/skills.scss
@@ -1,3 +1,8 @@
 #skills{
+    background:url("../images/bg/bg_white_1.jpg") no-repeat center;
+    background-size:cover;
     padding-bottom:0px;
+    #mainBubble{
+        text-align: center;
+    }
 }
