--- a/views/partials/about.hbs
+++ b/views/partials/about.hbs
@@ -1,23 +1,17 @@
 <section id="about">
     <div class="container">
         <div class="row">
-            <div class="col-md-4 col-sm-6 col-xs-12 about-me vertical-stack">
+            <div class="col-md-4 col-sm-12 col-xs-12 about-me vertical-stack">
                 <h2 class="title">
                    About me
                 </h2>
                 <div>
                     {{person.about}}
                 </div>
-                <div class="download-resume">
-                    <button class="btn">
-                        <span class="glyphicon glyphicon-download-alt"></span>
-                        <span>Resume</span>
-                    </button>
-                </div>
             </div>
             <div class="vertical-stack col-md-4 col-sm-6 col-xs-12 photo wow fadeIn animated">
                 <div class="img-thumbnail img-responsive">
-                    <img src="images/pic/photo1.JPG" alt="myPhoto">
+                    <img src="images/pic/photo.jpg" alt="myPhoto">
                 </div>
             </div>
             <div class="vertical-stack col-md-4 col-sm-6 col-xs-12 personal-info">
