--- a/public/stylesheets/views/about.scss
+++ b/public/stylesheets/views/about.scss
@@ -1,15 +1,12 @@
 #about{
-  .vertical-stack{
-    margin-top:20px;
-  }
   .about-me{
     padding:15px;
     .download-resume{
       margin-top:30px;
-      color:#fff;
       text-transform: uppercase;
       .btn{
         background-color: $primaryBlue;
+        color:#fff;
       }
       .btn:hover{
         color:#fff;
@@ -21,7 +18,7 @@
     .img-thumbnail{
       @include box-shadow($shadowGray);
       img{
-        width:300px;
+        width:100%;
         height:auto;
       }
     }
@@ -32,14 +29,14 @@
     }
   }
   .personal-info{
-    font-family: $fantasy;
+    font-family: $font-impact;
     font-size:14px;
+    margin-top: 40px;
     td{
       border-top:none;
     }
     thead{
       font-size:28px;
-      color:$primaryBlue;
     }
     tbody{
       td:nth-child(2){
