--- a/public/stylesheets/views/hobby.scss
+++ b/public/stylesheets/views/hobby.scss
@@ -1,8 +1,6 @@
 #hobby{
-
     background:$hobbyBgGray;
     .nav{
-        font-size:14px;
         li{
             float:left;
             margin:0 7px 10px 7px;
@@ -43,6 +41,7 @@
             font-size:26px;
             text-align:center;
             color:rgba($primaryBlue,0.8);
+            padding-top:20px;
             i{
                 margin:10px;
                 cursor: pointer;
