--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,7 +19,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand wow fadeInLeft animated" href="#home">
-                        <img src="images/pic/thumb1.jpg" class="img-circle" alt="Cinque Terre" width="80" height="80">
+                        <img src="images/pic/thumb.jpg" class="img-circle brand-img" alt="thumb" width="80" height="80">
                     </a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
@@ -50,12 +50,18 @@
         {{>hobby}}
     </main>
     <footer>
-
+        <div class="container">
+            <p>&copy; 2016 Lin LI</p>
+            <p><a class="github" href="https://github.com/LinLi88/personal-website" target="_blank">GitHub Project</a></p>
+        </div>
+        <div class="goto-top">
+            <a href="#home"><span class="fa fa-arrow-circle-up"></span></a>
+        </div>
     </footer>
 </body>
-<script type="text/javascript" src="javascripts/lib/jquery-3.1.0.js"></script>
-<script type="text/javascript" src="javascripts/lib/bootstrap.js"></script>
-<script type="text/javascript" src="javascripts/lib/angular.js"></script>
+<script type="text/javascript" src="javascripts/lib/jquery-3.1.0.min.js"></script>
+<script type="text/javascript" src="javascripts/lib/bootstrap.min.js"></script>
+<script type="text/javascript" src="javascripts/lib/angular.min.js"></script>
 <script type="text/javascript" src="javascripts/lib/wow.min.js"></script>
 <script type="text/javascript" src="javascripts/lib/owl.carousel.min.js"></script>
 <script type="text/javascript" src="javascripts/lib/d3.min.js"></script>
