--- a/public/stylesheets/views/base.scss
+++ b/public/stylesheets/views/base.scss
@@ -50,4 +50,40 @@ body{
   .vertical-stack{
     margin-top:20px;
   }
+  @-webkit-keyframes fadeInUpSmall {
+    from {
+      opacity: 0;
+      -webkit-transform: translate3d(0, 20px, 0);
+      transform: translate3d(0, 20px, 0);
+    }
+
+    to {
+      opacity: 1;
+      -webkit-transform: none;
+      transform: none;
+    }
+  }
+
+  @keyframes fadeInUpSmall {
+    from {
+      opacity: 0;
+      -webkit-transform: translate3d(0, 20px, 0);
+      transform: translate3d(0, 20px, 0);
+    }
+
+    to {
+      opacity: 1;
+      -webkit-transform: none;
+      transform: none;
+    }
+  }
+
+  .fadeInUpSmall {
+    -webkit-animation-name: fadeInUpSmall;
+    animation-name: fadeInUpSmall;
+  }
+
+  .hide-ele{
+    display:none;
+  }
 }
