--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,7 +18,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand wow fadeInLeft animated" href="#home">
+                    <a class="navbar-brand fadeInLeft animated" href="#home">
                         <img src="images/pic/thumb.jpg" class="img-circle brand-img" alt="thumb" width="80" height="80">
                     </a>
                 </div>
@@ -54,7 +54,7 @@
             <p>&copy; 2016 Lin LI</p>
             <p><a class="github" href="https://github.com/LinLi88/personal-website" target="_blank">GitHub Project</a></p>
         </div>
-        <div class="goto-top">
+        <div class="goto-top bounceInDown animated">
             <a href="#home"><span class="fa fa-arrow-circle-up"></span></a>
         </div>
     </footer>
