--- a/public/stylesheets/views/projects.scss
+++ b/public/stylesheets/views/projects.scss
@@ -22,6 +22,7 @@
           position:absolute;
           top:0;
           padding:6%;
+          color:#fff;
           .description{
             color:#000;
           }
